--- a/src/_includes/layouts/about.html
+++ b/src/_includes/layouts/about.html
@@ -276,7 +276,7 @@
   .yl3-hero__overlay{
     position:absolute;
     inset:0;
-    background:linear-gradient(180deg, rgba(0,0,0,.35) 0%, rgba(0,0,0,.70) 50%, rgba(0,0,0,.96) 100%);
+    background:linear-gradient(180deg, rgba(0,0,0,.30) 0%, rgba(0,0,0,.65) 50%, rgba(0,0,0,1) 100%);
   }
   .yl3-hero__inner{
     position:relative;
